--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-728.9KB/s(Youtube:不良林), server: 42.157.195.235, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-823.9KB/s(Youtube:不良林), server: 42.157.195.229, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-984.4KB/s(Youtube:不良林), server: 42.157.195.230, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-657.1KB/s(Youtube:不良林), server: 42.157.195.231, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-348.0KB/s(Youtube:不良林), server: 42.157.195.245, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-727.7KB/s(Youtube:不良林), server: 42.157.195.242, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-859.7KB/s(Youtube:不良林), server: 42.157.195.233, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-638.5KB/s(Youtube:不良林), server: 42.157.195.228, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.48MB/s(Youtube:不良林), server: 42.157.195.240, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇨🇳 中国-950.4KB/s(Youtube:不良林), server: 14.152.92.74, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-837.4KB/s(Youtube:不良林), server: 42.157.195.244, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-9.03MB/s(Youtube:不良林), server: ingress-i2.onebox6.org, port: 38101, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i2.onebox6.org}}
-  - {name: 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇨🇳 中国-657.1KB/s(Youtube:不良林), server: 42.157.195.231, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇭🇰 香港-1.62MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
+  - {name: 🇨🇳 中国-451.1KB/s(Youtube:不良林), server: 14.152.92.70, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-770.2KB/s(Youtube:不良林), server: 42.157.195.237, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-720.5KB/s(Youtube:不良林), server: 42.157.195.236, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇺🇸 美国-333.8KB/s(Youtube:不良林), server: 45.61.173.125, port: 31224, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-728.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-823.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-984.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-657.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-727.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-859.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-638.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-950.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-837.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-657.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-770.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-720.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-728.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-823.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-984.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-657.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-727.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-859.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-638.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-950.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-837.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-657.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-770.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-720.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-728.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-823.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-984.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-657.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-727.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-859.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-638.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-950.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-837.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-657.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-770.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-720.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-728.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-823.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-984.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-657.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-727.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-859.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-638.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-950.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-837.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-657.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-770.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-720.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-728.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-823.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-984.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-657.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-727.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-859.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-638.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-950.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-837.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-657.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-770.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-720.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-728.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-823.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-984.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-657.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-727.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-859.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-638.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-950.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-837.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-657.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-770.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-720.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-728.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-823.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-984.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-657.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-727.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-859.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-638.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-950.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-837.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-657.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-770.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-720.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
