--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,81 +5,58 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-1.01MB/s(Youtube:不良林), server: 213.183.53.177, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
-  - {name: 🇨🇳 台湾-708.6KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-332.2KB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s2.upyun.online, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-475.9KB/s(Youtube:不良林), server: 43.132.153.167, port: 23873, type: vmess, uuid: 143e2134-ca7d-46ff-e902-37d0967b9907, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.01MB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
+  - {name: 🇯🇵 日本-295.6KB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
+  - {name: 🇯🇵 日本-3.47MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-708.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-475.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-295.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-708.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-475.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-295.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-708.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-475.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-295.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-708.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-475.9KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-708.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-475.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-295.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-708.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-475.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-295.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-708.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-475.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-295.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -95,11 +72,8 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-708.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-475.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-295.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
