--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,31 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-295.6KB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
-  - {name: 🇯🇵 日本-3.47MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-886.4KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇸🇬 新加坡-374.6KB/s(Youtube:不良林), server: sg1.v2yyds.cc, port: 32110, type: trojan, password: c0669346-7ba9-4fda-91a4-238fb8d0a4d2, sni: sg1.v2yyds.cc, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-4.16MB/s(Youtube:不良林), server: 20.196.206.47, port: 8313, type: ss, cipher: chacha20-ietf-poly1305, password: ljqdalu13..}
+  - {name: 🇨🇳 中国-306.6KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-420.4KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-295.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇫🇷 法国-886.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-374.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-295.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇫🇷 法国-886.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-374.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-295.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇫🇷 法国-886.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-374.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -40,23 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-295.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇫🇷 法国-886.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-374.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-295.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇫🇷 法国-886.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-374.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-295.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇫🇷 法国-886.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-374.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -72,8 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-295.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇫🇷 法国-886.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-374.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
