--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,8 +5,8 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-251.4KB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-2.26MB/s(Youtube:不良林), server: 20.196.206.47, port: 8313, type: ss, cipher: chacha20-ietf-poly1305, password: ljqdalu13..}
+  - {name: 🇯🇵 日本-153.3KB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-166.9KB/s(Youtube:不良林), server: 20.196.206.47, port: 8313, type: ss, cipher: chacha20-ietf-poly1305, password: ljqdalu13..}
   - {name: 🇨🇳 中国-3.09MB/s(Youtube:不良林), server: us24052.cloudmatrix.xyz, port: 24052, type: vmess, uuid: a992be42-bed4-3037-8788-9e860cd635d3, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: us24052.cloudmatrix.xyz}}
   - {name: 🇦🇺 澳大利亚-459.2KB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-2.49MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
@@ -16,8 +16,8 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-251.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-153.3KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-166.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-459.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.49MB/s(Youtube:不良林)
@@ -26,8 +26,8 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-251.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-153.3KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-166.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-459.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.49MB/s(Youtube:不良林)
@@ -37,8 +37,8 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-251.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-153.3KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-166.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-459.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.49MB/s(Youtube:不良林)
@@ -52,8 +52,8 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-251.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-153.3KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-166.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-459.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.49MB/s(Youtube:不良林)
@@ -62,8 +62,8 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-251.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-153.3KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-166.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-459.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.49MB/s(Youtube:不良林)
@@ -73,8 +73,8 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-251.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-153.3KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-166.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-459.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.49MB/s(Youtube:不良林)
@@ -93,8 +93,8 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-251.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-153.3KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-166.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-459.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.49MB/s(Youtube:不良林)
