--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -7,9 +7,9 @@ external-controller: :9090
 proxies:
   - {name: 🇯🇵 日本-153.3KB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
   - {name: 🇰🇷 韩国-166.9KB/s(Youtube:不良林), server: 20.196.206.47, port: 8313, type: ss, cipher: chacha20-ietf-poly1305, password: ljqdalu13..}
-  - {name: 🇨🇳 中国-3.09MB/s(Youtube:不良林), server: us24052.cloudmatrix.xyz, port: 24052, type: vmess, uuid: a992be42-bed4-3037-8788-9e860cd635d3, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: us24052.cloudmatrix.xyz}}
-  - {name: 🇦🇺 澳大利亚-459.2KB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-2.49MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇦🇺 澳大利亚-510.1KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-352.2KB/s(Youtube:不良林), server: 185.167.116.250, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -18,9 +18,9 @@ proxy-groups:
       - 🎯 全球直连
       - 🇯🇵 日本-153.3KB/s(Youtube:不良林)
       - 🇰🇷 韩国-166.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-459.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-510.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-352.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
@@ -28,9 +28,9 @@ proxy-groups:
     proxies:
       - 🇯🇵 日本-153.3KB/s(Youtube:不良林)
       - 🇰🇷 韩国-166.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-459.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-510.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-352.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -39,9 +39,9 @@ proxy-groups:
       - 🎯 全球直连
       - 🇯🇵 日本-153.3KB/s(Youtube:不良林)
       - 🇰🇷 韩国-166.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-459.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-510.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-352.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -54,9 +54,9 @@ proxy-groups:
       - 🔰 节点选择
       - 🇯🇵 日本-153.3KB/s(Youtube:不良林)
       - 🇰🇷 韩国-166.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-459.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-510.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-352.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
@@ -64,9 +64,9 @@ proxy-groups:
       - 🎯 全球直连
       - 🇯🇵 日本-153.3KB/s(Youtube:不良林)
       - 🇰🇷 韩国-166.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-459.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-510.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-352.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -75,9 +75,9 @@ proxy-groups:
       - ♻️ 自动选择
       - 🇯🇵 日本-153.3KB/s(Youtube:不良林)
       - 🇰🇷 韩国-166.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-459.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-510.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-352.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -95,9 +95,9 @@ proxy-groups:
       - ♻️ 自动选择
       - 🇯🇵 日本-153.3KB/s(Youtube:不良林)
       - 🇰🇷 韩国-166.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-459.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-510.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-352.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
